# fast-go-annotations

./: Cargo.toml  README.md
resources/: alt_id_ont.json
src/: main.rs  ontology.rs  report.rs  resource.rs  rules.rs  validate.rs
src/annotation/: fields.rs  gaf.rs  mod.rs  model.rs
src/meta/: curie.rs  eco.rs  mod.rs
