[package]
name = "fast-go-annotations"
version = "0.1.0"
authors = ["Eric Douglass <dougli1sqrd+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastobo-graphs = "0.4"
daggy = "0.7"
csv = "1.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
itertools = "0.9"
regex = "1.4"
lazy_static = "1.4"
bimap = "0.5"
strum = "0.20"
strum_macros = "0.20"
json-ld = "0.2.0-alpha"
clap = "2.33.3"